# cse-enumeration

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/instance/: instance.cpp  instance.hpp  professor.cpp  professor.hpp
src/instancesGenerator/: instancesGenerator.cpp  instancesGenerator.hpp
src/model/: model.cpp  model.hpp
